[project]
name = "vector-bd-into"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "black>=25.12.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.2",
    "langchain-pinecone>=0.2.13",
    "langsmith>=0.1.0",
    "python-dotenv>=1.2.1",
]
